# secret-manager-util

./: Cargo.toml  README.md
src/: main.rs
