[package]
name = "secret-manager-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.15.0", features = ["full"] }
aws-sdk-secretsmanager = { version = "1.11.0", features = ["rustls"] }
aws-config = { version = "1.1.1" }
serde_json = "1.0.108"
clap = "2"
